[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/backgroundMountainsDay.PNG" type="Texture" id=2]
[ext_resource path="res://assets/Path to Lake Land.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/MinecraftTitle.ttf"

[sub_resource type="DynamicFont" id=2]
size = 54
outline_size = 6
outline_color = Color( 0.054902, 0.0470588, 0.0470588, 1 )
extra_spacing_char = 3
extra_spacing_space = -1
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/MinecraftTitle.ttf"

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/MinecraftTitle.ttf"

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/MinecraftTitle.ttf"

[sub_resource type="DynamicFont" id=8]
size = 17
font_data = SubResource( 7 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -263.0
margin_top = 70.0
margin_right = 263.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_x = 8
custom_constants/line_spacing = -8
text = "Friendly Fire 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -104.0
margin_right = 134.0
margin_bottom = -69.0
focus_neighbour_top = NodePath("../ButtonExit")
focus_neighbour_bottom = NodePath("../ButtonDemo")
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOption" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = 24.0
margin_right = 133.5
margin_bottom = 62.0
focus_neighbour_top = NodePath("../ButtonDemo")
focus_neighbour_bottom = NodePath("../ButtonExit")
custom_fonts/font = SubResource( 6 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDemo" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -40.0
margin_right = 134.0
margin_bottom = -2.0
focus_neighbour_top = NodePath("../ButtonStart")
focus_neighbour_bottom = NodePath("../ButtonOption")
custom_fonts/font = SubResource( 6 )
text = "Demo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = 88.0
margin_right = 134.5
margin_bottom = 127.0
focus_neighbour_top = NodePath("../ButtonOption")
focus_neighbour_bottom = NodePath("../ButtonStart")
custom_fonts/font = SubResource( 8 )
text = "Exit"

[node name="Backgroundsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonOption" to="." method="_on_ButtonOption_pressed"]
[connection signal="pressed" from="ButtonDemo" to="." method="_on_ButtonDemo_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
